# AppleLikeAvatarGenerator

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/apple_like_avatar_generator_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: apple_like_avatar_generator.podspec
lib/: apple_like_avatar_generator.dart
lib/src/: apple_like_avatar_generator.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: core.dart
linux/: CMakeLists.txt
macos/: apple_like_avatar_generator.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: core.rs
windows/: CMakeLists.txt
