[package]
name = "apple_like_avatar_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
image = "0.25.9"
md5 = "0.8.0"
regex = "1.12.3"
takumi = "0.69.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
